--- a/index.html
+++ b/index.html
@@ -8,29 +8,40 @@
       <link rel="stylesheet" href="style.css" />
    </head>
    <body>
-      <header>
-         <h1>Welcome to Hemmafest</h1>
-         <p>Your go-to app for parties, events, and meeting new people in your area.</p>
-      </header>
+      <div style="height: 150px"></div>
+      <div style="display: flex; align-items: center; height: 100px">
+         <img style="margin: 0; padding: 0; margin-right: 8px" src="logopng.png" width="80" alt="" />
+         <h2 style="margin: 0; padding: 0">Hemmafest!</h2>
+      </div>
 
-      <main>
-         <h2>Get the Hemmafest App</h2>
-         <p>Download Hemmafest from the App Store and start creating and joining parties near you today!</p>
-         <a href="https://apps.apple.com/app/hemmafest" class="appstore-button">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/App_Store_Icon.png" alt="Download on the App Store" />
-         </a>
+      <h2 style="margin-top: 0">
+         <p>Joina nära fester eller skapa en ny!</p>
+      </h2>
 
-         <h3>Features</h3>
-         <ul>
-            <li>Discover local parties or create your own.</li>
-            <li>Invite friends or meet new people at events.</li>
-            <li>Easy-to-use interface to keep track of your upcoming and past parties.</li>
-         </ul>
-      </main>
+      <div id="iphone">
+         <div id="hardware"></div>
+         <div id="ui">
+            <img src="head.png" class="top-ui" alt="" />
 
-      <footer>
-         <p><a href="/policy.html">Privacy Policy</a> | <a href="/support.html">Support</a></p>
-         <p>&copy; 2024 Hemmafest. All rights reserved.</p>
-      </footer>
+            <ul>
+               <li>
+                  <img src="item1.png" />
+               </li>
+               <li>
+                  <img src="item2.png" />
+               </li>
+               <li>
+                  <img src="item3.png" />
+               </li>
+               <li>
+                  <a href="">
+                     <img src="appstore.png" />
+                  </a>
+               </li>
+            </ul>
+         </div>
+      </div>
+
+      <script src="script.js"></script>
    </body>
 </html>
