--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <img src="item3.png" />
                </li>
                <li>
-                  <a href="">
+                  <a href="https://apps.apple.com/us/app/hemmafest/id6736556918">
                      <img src="appstore.png" />
                   </a>
                </li>
