--- a/index.html
+++ b/index.html
@@ -1,47 +1,341 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Hemmafest - Find & Create Parties Near You</title>
-      <meta name="description" content="Find and create parties near you. Hemmafest is the app to connect with friends, join social events, or create your own party." />
-      <link rel="stylesheet" href="style.css" />
-   </head>
-   <body>
-      <div style="height: 150px"></div>
-      <div style="display: flex; align-items: center; height: 100px">
-         <img style="margin: 0; padding: 0; margin-right: 8px" src="logopng.png" width="80" alt="" />
-         <h2 style="margin: 0; padding: 0">Hemmafest!</h2>
-      </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>catso.io</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+    <link href="https://dl.dropboxusercontent.com/scl/fi/imkhf8xsprd5rddywvvuc/against2.css?rlkey=9km4vufls4l31qvgicl89uhyp&dl=0" rel="stylesheet" />
+    <link href="https://dl.dropboxusercontent.com/scl/fi/f46yeqsom63qnhve10ko3/qaligo.css?rlkey=8dw2iqwz6265g3wjqcx0kypiw&dl=0" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet" />
 
-      <h2 style="margin-top: 0">
-         <p>Joina nära fester eller skapa en ny!</p>
-      </h2>
+    <link rel="stylesheet" href="catso.io.css" />
+  </head>
 
-      <div id="iphone">
-         <div id="hardware"></div>
-         <div id="ui">
-            <img src="head.png" class="top-ui" alt="" />
+  <body>
+    <div class="side-label">One paw in the codebase, one in the cloud™ since nine lives ago™</div>
+    <div class="logo-container">
+      <img src="cc.png" alt="Catso Logo" class="logo" />
+    </div>
+    <div class="sections-wrapper">
+      <!-- Hero Section -->
+      <section class="section hero">
+        <div class="text-container">
+          <h1 class="layerx layer1">CATSO.io</h1>
+          <h1 class="layerx layer2">CATSO.io</h1>
+          <h1 class="layerx layer3">CATSO.io</h1>
+          <!-- <p class="subtext">getting blessed.</p> -->
+        </div>
 
-            <ul>
-               <li>
-                  <img src="item1.png" />
-               </li>
-               <li>
-                  <img src="item2.png" />
-               </li>
-               <li>
-                  <img src="item3.png" />
-               </li>
-               <li>
-                  <a href="https://apps.apple.com/us/app/hemmafest/id6736556918">
-                     <img src="appstore.png" />
-                  </a>
-               </li>
-            </ul>
-         </div>
-      </div>
+        <div class="gradient-bg">
+          <svg xmlns="http://www.w3.org/2000/svg">
+            <defs>
+              <filter id="goo">
+                <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+                <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -8" result="goo" />
+                <feBlend in="SourceGraphic" in2="goo" />
+              </filter>
+            </defs>
+          </svg>
+          <div class="gradients-container">
+            <div class="g1"></div>
+            <div class="g2"></div>
+            <div class="g3"></div>
+            <div class="g4"></div>
+            <div class="g5"></div>
+            <div class="interactive"></div>
+          </div>
+        </div>
+      </section>
 
-      <script src="script.js"></script>
-   </body>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+      <i class="rain"></i>
+
+      <!-- Project Sections -->
+      <section class="banner-section-main section">
+        <a href="https://hemmafest.catso.io/" target="_blank">
+          <div class="banner-section-inner">
+            <div class="banner-section-loop" style="background-image: url('catso-hemmafest-bg.png')">
+              <div class="banner-left-vertical-main">
+                <h6>Nov. 2024</h6>
+              </div>
+              <div class="banner-main-img">
+                <div class="main-img scene">
+                  <img src="hemmafest-logo.png" alt="banner-img-1" class="layer img-responsive" data-depth="0.2" />
+                </div>
+              </div>
+              <div class="banner-content-main banner-content-main1">
+                <h5>iOS, Android</h5>
+                <h1 class="title1">Hemmafest!</h1>
+                <div class="controller-box-section">
+                  <div class="controller-box-content">
+                    <h5>Joina fester eller skapa egna!</h5>
+                    <p>Hitta spontana hemmafester, för- eller efterfester i närheten – eller starta egna och gör din stad roligare!</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+      </section>
+      <section class="banner-section-main section">
+        <a href="https://poangjakten.catso.io/" target="_blank">
+          <div class="banner-section-inner">
+            <div class="banner-section-loop" style="background-image: url('catso-pj-bg.png')">
+              <div class="banner-left-vertical-main">
+                <h6>Aug. 2025</h6>
+              </div>
+              <div class="banner-main-img">
+                <div class="main-img scene">
+                  <img src="pj-logo-nobg.png" alt="banner-img-1" class="layer img-responsive" data-depth="0.2" />
+                </div>
+              </div>
+              <div class="banner-content-main banner-content-main2">
+                <h5>iOS, Android</h5>
+                <h1 class="title2">Poängjakten</h1>
+                <div class="controller-box-section">
+                  <div class="controller-box-content">
+                    <h5>där det rinner ✨ aura ✨</h5>
+                    <p>Visa att er klass är bäst.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+      </section>
+
+      <script
+        src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"
+        integrity="sha512-/6TZODGjYL7M8qb7P6SflJB/nTGE79ed1RfJk3dfm/Ib6JwCT4+tOfrrseEHhxkIhwG8jCl+io6eaiWLS/UX1w=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+      ></script>
+      <script src="catso.io.js"></script>
+    </div>
+  </body>
 </html>
